--- a/jewrly_init-main/index.html
+++ b/jewrly_init-main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>今日指引</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles.css">
     
 </head>
@@ -76,11 +77,20 @@
             </div>
         </div>
 
-       
+        <!-- 结果展示区域 -->
+        <div class="results-container">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <!-- 滑动页面将通过JavaScript动态添加 -->
+                </div>
+                <!-- 分页器 -->
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
-
-
 </html>
